--- a/ribbon-theme.css
+++ b/ribbon-theme.css
@@ -4,7 +4,7 @@
     --ribbonMargin: 3px;
     --ribbonMarginMinusOne: 2px;
     --ribbonMarginPlusOne: 4px;
-    --ribbonBackgroundImage: url("chrome://vivaldi-data/local-image/DVHPBS3HZ6FRMC6NTTNA3FJZSL2PXLLO.jpg");
+    --ribbonBackgroundImage: url("");
 }
 
 /* background color */
@@ -45,14 +45,14 @@
 
 /* side panel + content */
 
-#browser:not(.fullscreen) > #main > .inner {
+#browser:not(.fullscreen) #main .inner {
     margin: 0 var(--ribbonMarginPlusOne) var(--ribbonMargin) var(--ribbonMargin) !important;
     border-radius: var(--ribbonRadius) !important;
 }
 
 /* side panel */
 
-#browser:not(.fullscreen) > #main > .inner > #panels-container {
+#browser:not(.fullscreen) #main .inner #panels-container {
     margin: 0 var(--ribbonMarginPlusOne) 0 0 !important;
     border-radius: var(--ribbonRadius) !important;
     background-color: var(--colorBgAlphaBlur) !important;
@@ -62,22 +62,18 @@
     border-radius: var(--ribbonRadius) !important;
 }
 
-#browser:not(.fullscreen) > #main > .inner > #panels-container > #panels > #switch {
+#browser:not(.fullscreen) #main .inner #panels-container #panels #switch {
     margin: 0 var(--ribbonMarginPlusOne) 0 0 !important;
     border-radius: var(--ribbonRadius) !important;
     backdrop-filter: none;
 }
-
-/* .panel-group {
-    background-color: var(--colorBgAlphaBlur) !important;
-} */
 
 .panel-group, .webpanel-content {
     margin: 0 0 0 var(--ribbonMargin) !important;
     border-radius: var(--ribbonRadius) !important;
 }
 
-#panels-container:not(.overlay) > div > div > div .webpanel-stack {
+#panels-container:not(.overlay) div div div .webpanel-stack {
     margin-left: 10px !important;
 }
 
@@ -109,7 +105,7 @@
 
 /* footer */
 
-#browser:not(.fullscreen) > footer {
+#browser:not(.fullscreen) footer {
     margin: 0 var(--ribbonMargin) var(--ribbonMarginMinusOne) var(--ribbonMargin) !important;
     border-radius: var(--ribbonRadius) !important;
     background-color: var(--colorBgAlphaBlur) !important;
@@ -117,12 +113,4 @@
 
 footer::after {
     background-color: transparent !important;
-}
-
-/* mail */
-
-#mail_search {
-    margin: 0 var(--ribbonMarginPlusOne) 0 0 !important;
-    border-radius: var(--ribbonRadius) !important;
-    background-color: var(--colorBgAlphaBlur) !important;
 }
