--- a/ribbon-theme.css
+++ b/ribbon-theme.css
@@ -2,8 +2,10 @@
     --ribbonTransition: 0.5s;
     --ribbonRadius: 5px;
     --ribbonMargin: 3px;
-    --ribbonMarginMinusOne: 2px;
-    --ribbonMarginPlusOne: 4px;
+    --ribbonMarginMinusOne: calc(var(--ribbonMargin) - 1px);
+    --ribbonMarginPlusOne: calc(var(--ribbonMargin) + 1px);
+    --ribbonSidebarSize: 25px;
+    --ribbonSidebarButtonSize: calc(var(--ribbonSidebarSize) - 1px);
     --ribbonBackgroundImage: url("");
 }
 
@@ -66,6 +68,22 @@
     margin: 0 var(--ribbonMarginPlusOne) 0 0 !important;
     border-radius: var(--ribbonRadius) !important;
     backdrop-filter: none;
+}
+
+#panels-container.icons,
+#panels-container.overlay,
+#panels,
+.toolbar-panel {
+    width: var(--ribbonSidebarSize) !important;
+}
+
+#switch,
+.toolbar-panel .button-toolbar {
+    width: var(--ribbonSidebarButtonSize) !important;
+}
+
+.panel-group {
+    left: var(--ribbonSidebarSize) !important;
 }
 
 .panel-group, .webpanel-content {
