remove border of address field

--- a/ribbon-theme.css
+++ b/ribbon-theme.css
@@ -37,6 +37,7 @@
 
 .UrlBar-AddressField {
     background-color: var(--colorBgAlphaBlur) !important;
+    border: none !important;
     border-radius: var(--ribbonRadius);
 }
 
