--- a/ribbon-theme.css
+++ b/ribbon-theme.css
@@ -41,6 +41,11 @@
     border-radius: var(--ribbonRadius);
 }
 
+.pageload,
+.pageload-indicator {
+    border-radius: var(--ribbonRadius) !important;
+}
+
 .OmniDropdown {
     background-color: var(--colorBgAlpha) !important;
     backdrop-filter: var(--backgroundBlur);
