--- a/ribbon-theme.css
+++ b/ribbon-theme.css
@@ -44,6 +44,7 @@ button.vivaldi {
 .tab.active {
     border-bottom-left-radius: var(--radiusHalf) !important;
     border-bottom-right-radius: var(--radiusHalf) !important;
+    height: 29px !important;
 }
 
 .tab.active:before, .tab.active:after {
