--- a/ribbon-theme.css
+++ b/ribbon-theme.css
@@ -31,8 +31,8 @@ button.vivaldi {
 
 #header,
 #browser:not(.transparent-tabbar) #tabs-tabbar-container,
-#browser.color-behind-tabs-on .tab-position .tab.active.active,
-#browser .tab-position .tab.active,
+#browser.color-behind-tabs-on .tab.active.active,
+#browser .tab.active,
 .color-behind-tabs-off .mainbar {
     transition: background-color var(--ribbonTransition), border-color var(--ribbonTransition) !important;
 }
@@ -47,7 +47,8 @@ button.vivaldi {
     height: 29px !important;
 }
 
-.tab.active:before, .tab.active:after {
+.tab.active:before,
+.tab.active:after {
     background-color: transparent !important;
 }
 
@@ -80,41 +81,42 @@ button.vivaldi {
 
 /* side panel + content */
 
-#browser:not(.fullscreen) #main .inner {
+#browser:not(.fullscreen) .inner {
     margin: 0 var(--ribbonMargin) var(--ribbonMargin) var(--ribbonMargin) !important;
 }
 
 /* side panel */
 
-#browser:not(.fullscreen) #main .inner #panels-container {
+#browser:not(.fullscreen) #panels-container {
     margin: 0 var(--ribbonMargin) 0 0 !important;
     border-radius: var(--radius) !important;
 }
 
-#browser:not(.fullscreen) #main .inner #panels-container #panels #switch {
+#browser:not(.fullscreen) #panels #switch {
     backdrop-filter: none !important;
 }
 
 #panels-container.icons,
 #panels-container.overlay,
 #panels,
-.toolbar-panel {
-    width: var(--ribbonSidebarSize) !important;
-}
-
 #switch,
+.toolbar-panel,
 .toolbar-panel .button-toolbar {
     width: var(--ribbonSidebarSize) !important;
 }
 
 .panel-group {
-    left: var(--ribbonSidebarSize) !important;
-    background-color: var(--ribbonColorAccentBgAlpha) !important;
-}
-
-#panels-container.overlay #panels .panel-group {
     margin: 0 0 0 var(--ribbonMargin) !important;
     border-radius: var(--radius) !important;
+    left: var(--ribbonSidebarSize) !important;
+}
+
+/* #panels-container.overlay .panel-group {
+    background-color: var(--ribbonColorAccentBgAlpha) !important;
+} */
+
+#panels-container:not(.overlay) .panel-group {
+    background-color: transparent !important;
 }
 
 header.webpanel-header {
@@ -133,7 +135,8 @@ header.webpanel-header {
     box-shadow: none !important;
 }
 
-.tile, .webpageview.tiled:not(.active) {
+.tile,
+.webpageview.tiled:not(.active) {
     box-shadow: none !important;
 }
 
@@ -182,3 +185,49 @@ footer .toolbar-statusbar .button-toolbar button {
 #mail_search .list-wrapper {
     background-color: var(--colorBg) !important;
 }
+
+/* sidebar on the left */
+
+/* #main, .inner {
+    overflow: visible !important;
+}
+
+#switch {
+    padding-top: 0px !important
+}
+
+.color-behind-tabs-off #panels-container {
+    --ribbonSidebarYOffset: calc(-64px - var(--ribbonMargin));
+    z-index: 100 !important;
+    transform: translateY(var(--ribbonSidebarYOffset)) !important;
+    height: calc(100% - var(--ribbonSidebarYOffset)) !important;
+}
+
+.color-behind-tabs-on #panels-container {
+    --ribbonSidebarYOffset: calc(-64px - var(--ribbonMargin) * 2);
+    z-index: 100 !important;
+    transform: translateY(var(--ribbonSidebarYOffset)) !important;
+    height: calc(100% - var(--ribbonSidebarYOffset)) !important;
+}
+
+#header {
+    --ribbonMainbarMargin: calc(var(--ribbonSidebarSize) + var(--ribbonMargin) * 2);
+    margin-left: var(--ribbonMainbarMargin) !important;
+    margin-top: var(--ribbonMargin) !important;
+    margin-right: var(--ribbonMargin) !important;
+    margin-bottom: var(--ribbonMargin) !important;
+    border-radius: var(--radius) !important;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+}
+
+#tabs-tabbar-container {
+    padding-top: 0px !important;
+}
+
+.mainbar {
+    --ribbonMainbarMargin: calc(var(--ribbonSidebarSize) + var(--ribbonMargin) * 2);
+    position: relative !important;
+    left: var(--ribbonMainbarMargin) !important;
+    width: calc(100% - var(--ribbonMainbarMargin) - var(--ribbonMargin) * 2) !important;
+} */
