--- a/ribbon-theme.css
+++ b/ribbon-theme.css
@@ -27,6 +27,7 @@
 
 #browser.color-behind-tabs-off #header,
 #browser:not(.fullscreen).color-behind-tabs-on .mainbar,
+#browser.color-behind-tabs-off .UrlBar-AddressField,
 #browser.color-behind-tabs-on .tab.active,
 #panels-container,
 footer,
@@ -34,7 +35,6 @@ footer,
     background-color: var(--colorBgAlphaBlur) !important;
 }
 
-#browser.color-behind-tabs-off .UrlBar-AddressField,
 .OmniDropdown,
 .modal-wrapper,
 .startpage-navigation,
@@ -155,6 +155,10 @@ button.vivaldi {
     padding-left: 0px !important;
 }
 
+#browser.normal #tabs-tabbar-container {
+    padding-top: 0px !important;
+}
+
 .tab.active {
     height: 29px !important;
 }
@@ -215,13 +219,24 @@ footer .toolbar-statusbar .button-toolbar button {
 }
 
 .RibbonDomainButton {
-    height: 22px;
-    background-color: var(--colorBgAlphaHeavy);
+    background-color: var(--colorAccentBgAlpha);
     margin-left: 4px;
     border: none;
     line-height: 0;
     display: flex;
     align-items: center;
+}
+
+.RibbonDomainButton:hover {
+    background-color: var(--colorAccentBg);
+}
+
+#browser.color-behind-tabs-off .RibbonDomainButton {
+    height: 22px !important;
+}
+
+#browser.color-behind-tabs-on .RibbonDomainButton {
+    height: 20px !important;
 }
 
 .RibbonTitle {
